lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:30: error: not found: type Segment
def getLandingZone():Segment = {
                     ^Lander:41: error: not found: value Segment
			return Segment(premier,deuxieme)
                               ^Lander:44: error: not found: value Segment
	return Segment(premier,deuxieme)
               ^Lander:48: error: not found: value zone
	if(getX<zone(0).x){
                ^Lander:51: error: not found: value zone
	else if((getX>=zone(0).x)&&(getX<=zone(1).x)){
                       ^